click to know button link updated

--- a/index.html
+++ b/index.html
@@ -78,11 +78,9 @@
         <div class="col-lg-6 align-self-center">
           <div class="header-text">
             <h5>Welcome to e-VSP</h5>
-            <h2>Vidhi Sahitya 
-
-           <em>Prakashan!</em> </h2>
+            <h2>Vidhi Sahitya <em>Prakashan!</em> </h2>
             <div class="main-button-gradient">
-              <div class="scroll-to-section"><a href="#contact-section">Click to know more!</a></div>
+              <div class="scroll-to-section"><a href="#services">Click to know more!</a></div>
             </div>
           </div>
         </div>
